# actions_demo

./: .flake8  pyproject.toml  setup.py
.github/workflows/: build.yml  lint.yml  test.yml
src/: __init__.py  book.py  library.py  user.py
tests/: test_book.py  test_library.py  test_user.py
